--- a/apps/bitcoin-il/package.json
+++ b/apps/bitcoin-il/package.json
@@ -24,9 +24,10 @@
     "react-scroll-detect": "^1.2.0",
     "react-vertical-timeline-component": "^3.5.2",
     "react-youtube": "^9.0.2",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
-    "yarn": "^1.22.18",
-    "turbo": "^1.3.0"
+    "turbo": "^1.3.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@bitil/locales": "*",
