--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,10 @@ jobs:
       
       - name: Add custom CNAME to app's dist 
         run:
-          touch apps/bitcoin-il/dist/CNAME
-          echo "${{secrets.CUSTOM_CNAME}}" >> apps/bitcoin-il/dist/CNAME
+          touch ./apps/bitcoin-il/dist/CNAME
+          echo "${{ secrets.CUSTOM_CNAME }}" >> ./apps/bitcoin-il/dist/CNAME
+          touch ./apps/bitcoin-il/dist/TNAME
+          echo "TESTING" >> ./apps/bitcoin-il/dist/TNAME
 
       - name: Init new repo in dist folder and commit generated files
         run: |
