--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,12 +51,19 @@ jobs:
           echo NOTION_PAGE=${{ secrets.NOTION_PAGE }} >> packages/locales/.env
           yarn build --filter=bitcoin-il
       
-      - name: Add custom CNAME to app's dist 
-        run:
-          touch ./apps/bitcoin-il/dist/CNAME
-          echo "${{ secrets.CUSTOM_CNAME }}" >> ./apps/bitcoin-il/dist/CNAME
-          touch ./apps/bitcoin-il/dist/TNAME
-          echo "TESTING" >> ./apps/bitcoin-il/dist/TNAME
+      - name: Custom file write
+        uses: actions/write-to-file@v1.0
+        with:
+          filepath: ./apps/bitcoin-il/dist/TNAME
+          content: TESTING
+          mode: 0655
+      
+      - name: CNAME file write
+        uses: actions/write-to-file@v1.0
+        with:
+          filepath: ./apps/bitcoin-il/dist/CNAME
+          content: ${{ secrets.CUSTOM_CNAME }}
+          mode: 0655
 
       - name: Init new repo in dist folder and commit generated files
         run: |
