Added support for RTL antd configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,14 +51,7 @@ jobs:
           echo NOTION_PAGE=${{ secrets.NOTION_PAGE }} >> packages/locales/.env
           yarn build --filter=bitcoin-il
       
-      - name: Custom file write
-        uses: frdrwrt/write-to-file@v1.3
-        with:
-          filepath: ./apps/bitcoin-il/dist/TNAME
-          content: TESTING
-          mode: 0655
-      
-      - name: CNAME file write
+      - name: Write CNAME file to app's dist
         uses: frdrwrt/write-to-file@v1.3
         with:
           filepath: ./apps/bitcoin-il/dist/CNAME
