--- a/packages/themes/src/lib/bitil-theme/theme.yaml
+++ b/packages/themes/src/lib/bitil-theme/theme.yaml
@@ -2,7 +2,9 @@ name: bitil-theme
 title: BitIL Theme
 description: Main Theme with soothing dark and light modes
 version: 1.0.0
-fontStylesheet: https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap
+fontStylesheet:
+  - https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap
+  - https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap
 variants:
   - less: theme-light.less
     name: bitil-light
