--- a/apps/bitcoin-il/package.json
+++ b/apps/bitcoin-il/package.json
@@ -35,6 +35,7 @@
     "@bitil/locales": "*",
     "@djitsu/themes": "*",
     "@formatjs/cli": "^5.0.1",
+    "@svgr/rollup": "^6.2.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/parser": "^5.16.0",
